src/objects/Application_Page__c.object
<CustomObject>
    <description>Page configuration for online applications</description>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Application</fullName>
                </value>
                <value>
                    <fullName>Comity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Types- Credential/License, Plan Review, Permit, etc.</description>
        <inlineHelpText>Application Types- Credential/License, Plan Review, Permit, etc.</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>List of license types</description>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This refers to the credential being applied for.</description>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID for the record. Once populated, it should not be changed for that record as it may impact data loads to other environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for the record. Once populated, it should not be changed for that record as it may impact data loads to other environments.</inlineHelpText>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Reciprocity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Reciprocity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is the license reinstatement.</description>
        <label>License Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this page applicable to License Renewal?</description>
        <inlineHelpText>Is this page applicable to License Renewal?</inlineHelpText>
        <label>License Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this page applicable to License?</description>
        <inlineHelpText>Is this page applicable to License?</inlineHelpText>
        <label>License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this for a permit reinstatement.</description>
        <label>Permit Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this page applicable to Permit Renewal?</description>
        <inlineHelpText>Is this page applicable to Permit Renewal?</inlineHelpText>
        <label>Permit Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>This is the name of the permit.</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this page applicable to Permit?</description>
        <inlineHelpText>Is this page applicable to Permit?</inlineHelpText>
        <label>Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>This  is the program related to the the permit</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Request</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DPCP</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Permit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>POWTS,Delegated,Service Request</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>Exam Re-Application SR</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>Title Modification SR</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>Test</value>
        </filters>
        <label>DPCP</label>
    </listViews>
    <nameField>
        <label>Application Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>